FIX: #38 - Fixed main page tour info z-index

--- a/src/app/components/as-tour-list/styles/as-tour-list.component.scss
+++ b/src/app/components/as-tour-list/styles/as-tour-list.component.scss
@@ -48,6 +48,7 @@
     font-size: 20px;
     padding: 2%;
     position: absolute;
+    z-index: 1;
 
     .title {
       font-weight: bold;
